1.2gb-content-2/kubernetes-master/test/e2e/testing-manifests/ingress/gce/static-ip-2/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-ip
  # This annotation is added by the test upon allocating a staticip.
  # annotations:
  #  kubernetes.io/ingress.global-static-ip-name: "staticip"
spec:
  rules:
  - host: ingress.test.com
    http:
      paths:
      - path: /foo
        pathType: "ImplementationSpecific"
        backend:
          service:
            name: echoheaders-https
            port:
              number: 80
# ID-1768294466-b3b43242
