1.2gb-content-2/kubernetes-master/test/e2e/testing-manifests/ingress/gce/static-ip-2/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoheaders-https
  labels:
    app: echoheaders-https
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: echoheaders-https
# ID-1768294466-a6b17d12
